--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: #1A729D;">
     <h1 style="font-family: Courier; color: #434342; font-size: 48px; text-align: center;">
-        DevOps is awesbfgdsfkjh!
+        This release is fucked up! Roll back ASAP!
     </h1>
 </body>
 </html>
