--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>DevOps Essentials Sample App</title>
 </head>
-<body style="background-color: #1A729D;">
+<body style="background-color:powderblue;">
     <h1 style="font-family: Courier; color: #434342; font-size: 48px; text-align: center;">
-        This release is fucked up! Roll back ASAP!
+        This release is fucked up!
     </h1>
 </body>
 </html>
