--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color:powderblue;">
     <h1 style="font-family: Courier; color: #434342; font-size: 48px; text-align: center;">
-        This release is fucked up!
+        DevOps is daklSHjfbjkdbsjfbsdjk!
     </h1>
 </body>
 </html>
